# numba-stats

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  coverage.sh  noxfile.py  pyproject.toml  python_releases.py  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  test.yml
bench/: plot.ipynb  release.json  test_stats.py
benchmarks/: test_stats.py
numba_stats/: __init__.py  _special.py  _version.py  stats.py
src/numba_stats/: __init__.py  _special.py  _util.py  argus.py  bernstein.py  binom.py  cmsshape.py  cpoisson.py  cruijff.py  crystalball.py  crystalball_ex.py  doublesidedcrystalball.py  expon.py  ext.py  laplace.py  lognorm.py  norm.py  not_in_scipy.py  poisson.py  qgaussian.py  stats.py  t.py  truncexpon.py  truncnorm.py  tsallis.py  uniform.py  voigt.py
src/numba_stats/special/: __init__.py  _erfinv.py  _ndtri.py  _polevl.py
tests/: scipy_doublecrystalball.py  test_argus.py  test_bernstein.py  test_binom.py  test_cmsshape.py  test_cpoisson.py  test_cruijff.py  test_crystalball.py  test_crystalball_ex.py  test_deprecated.py  test_doc.py  test_expon.py  test_ext.py  test_init.py  test_laplace.py  test_lognorm.py  test_norm.py  test_numba_stats.py  test_poisson.py  test_qgaussian.py  test_special.py  test_stats.py  test_t.py  test_truncexpon.py  test_truncnorm.py  test_tsallis.py  test_uniform.py  test_voigt.py
