[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/numba_stats/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q -ra --ff"
testpaths = ["tests"]

[tool.ruff]
select = [
    "E",
    "F", # flake8
    "D", # pydocstyle
]
extend-ignore = [
    "D212", # multi-line-summary-first-line
]
src = ["src"]
unfixable = [
    "F841", # Removes unused variables
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"setup.py" = ["D"]
"test_*.py" = ["B", "D"]
".ci/*.py" = ["D"]
"bench/*.py" = ["D"]
"docs/*.py" = ["D"]
