[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "numba-stats"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = ["numba>=0.53", "numpy>=1.20", "scipy>=1.5"]
authors = [{ name = "Hans Dembinski", email = "hans.dembinski@gmail.com" }]
readme = "README.md"
description = "Numba-accelerated implementations of scipy probability distributions and others used in particle physics"
license = { text = "MIT" }
classifiers = [
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
]

[project.urls]
repository = "https://github.com/hdembinski/numba-stats"

[project.optional-dependencies]
test = [
    "pytest>=6",
    "pytest-cov>=5",
    "pytest-benchmark>=4",
    "pydocstyle>=6",
    "coverage>=6",
    "nox"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q -ra --ff"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F", # flake8
    "D", # pydocstyle
]
extend-ignore = [
    "D212", # multi-line-summary-first-line
]
unfixable = [
    "F841", # Removes unused variables
]

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["D"]
"tests/*.py" = ["B", "D"]
".ci/*.py" = ["D"]
"bench/*.py" = ["D"]
"docs/*.py" = ["D"]

[tool.ruff.pydocstyle]
convention = "numpy"
