[metadata]
name = numba-stats
version = attr: numba_stats.__version__
author = Hans Dembinski
author_email = hans.dembinski@gmail.com
description = Numba-accelerated implementations of common probability distributions
homepage = https://github.com/hdembinski/numba-stats
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
project_urls =
    Bug Tracker = https://github.com/hdembinski/numba-stats/issues
license_files = LICENSE.txt

[options]
packages = numba_stats
package_dir =
    =src
python_requires = >=3.7
install_requires =
    numba >= 0.49
    numpy >= 1.18
    scipy >= 1.5

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-benchmark
    pydocstyle

[flake8]
max-line-length = 90

[tool:pytest]
testpaths = tests
addopts = --doctest-modules
